Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137850

moc_qwaylandxdgshell.cpp:625:60: error: template argument 1 is invalid

XMLWordPrintable

    • Linux/Wayland
    • 41bbe3cbf (dev), 89b56150a (6.10), 1eb3b3e8f (6.9)

      In file included from /home/qt/work/qt/qtwayland/src/compositor/extensions/qwaylandxdgshell.cpp:2137:
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp: In static member function ‘static constexpr auto QWaylandXdgToplevel::qt_create_metaobjectdata() [with <template-parameter-1-1> = \{anonymous}::qt_meta_tag_ZN19QWaylandXdgToplevelE_t]’:
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:625:60: error: template argument 1 is invalid
        625 |         QtMocHelpers::PropertyData<enum enum DecorationMode>(53, 0x80000000 | 54, QMC::DefaultPropertyFlags | QMC::EnumOrFlag, 18),
            |                                                            ^
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:453:35: warning: invalid return type ‘auto’ of ‘constexpr’ function ‘static constexpr auto QWaylandXdgToplevel::qt_create_metaobjectdata() [with <template-parameter-1-1> = \{anonymous}::qt_meta_tag_ZN19QWaylandXdgToplevelE_t]’ [-Winvalid-constexpr]
        453 | template <> constexpr inline auto QWaylandXdgToplevel::qt_create_metaobjectdata<qt_meta_tag_ZN19QWaylandXdgToplevelE_t>()
            |                                   ^~~~~~~~~~~~~~~~~~~
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp: In static member function ‘static void QWaylandXdgToplevel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)’:
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:41: error: expected identifier before ‘enum’
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                         ^~~~
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:60: error: expected ‘>’ before ‘*’ token
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                                            ^
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:60: error: expected ‘(’ before ‘*’ token
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                                            ^
            |                                                            (
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:61: error: expected primary-expression before ‘>’ token
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                                             ^
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:89: error: expected ‘)’ before ‘;’ token
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                                                                         ^
            |                                                                                         )
      Sccache command failed, re-try calling build tool directly
      In file included from /home/qt/work/qt/qtwayland/src/compositor/extensions/qwaylandxdgshell.cpp:2137:
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp: In static member function ‘static constexpr auto QWaylandXdgToplevel::qt_create_metaobjectdata() [with <template-parameter-1-1> = \{anonymous}::qt_meta_tag_ZN19QWaylandXdgToplevelE_t]’:
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:625:60: error: template argument 1 is invalid
        625 |         QtMocHelpers::PropertyData<enum enum DecorationMode>(53, 0x80000000 | 54, QMC::DefaultPropertyFlags | QMC::EnumOrFlag, 18),
            |                                                            ^
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:453:35: warning: invalid return type ‘auto’ of ‘constexpr’ function ‘static constexpr auto QWaylandXdgToplevel::qt_create_metaobjectdata() [with <template-parameter-1-1> = \{anonymous}::qt_meta_tag_ZN19QWaylandXdgToplevelE_t]’ [-Winvalid-constexpr]
        453 | template <> constexpr inline auto QWaylandXdgToplevel::qt_create_metaobjectdata<qt_meta_tag_ZN19QWaylandXdgToplevelE_t>()
            |                                   ^~~~~~~~~~~~~~~~~~~
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp: In static member function ‘static void QWaylandXdgToplevel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)’:
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:41: error: expected identifier before ‘enum’
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                         ^~~~
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:60: error: expected ‘>’ before ‘*’ token
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                                            ^
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:60: error: expected ‘(’ before ‘*’ token
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                                            ^
            |                                                            (
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:61: error: expected primary-expression before ‘>’ token
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                                             ^
      /home/qt/work/qt/qtwayland_build/src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:777:89: error: expected ‘)’ before ‘;’ token
        777 |         case 12: *reinterpret_cast<enum enum DecorationMode*>(_v) = _t->decorationMode(); break;
            |                                                                                         ^
            |                                                                                         )
      
      

      Build log: https://testresults.qt.io/logs/qt/qtwayland/1f60058fee14bfef1d43b2b5c81e1a959128a015/LinuxUbuntu_24_04x86_64LinuxUbuntu_24_04x86_64GCCqtci-linux-Ubuntu-24.04-x86_64-50-6ce658Sccache_UseConfigure/8c790d7fc11e6bea1527dd932a774112ff73c889/build_1750195279/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtwayland/tasks/1750195269

      Tested changes (refs/builds/qtci/6.10/1750190905):
      https://codereview.qt-project.org/c/qt/qtwayland/+/653885/2 Update dependencies on '6.10' in qt/qtwayland

        For Gerrit Dashboard: QTBUG-137850
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes