moc: Fix invalid codegen for qualified properties

We must not add an enum qualifie if it is already emitted because
it was part of the property signature.
Amends dea21545b32cf04337ca470483991dc7da39ba5b

Fixes: QTBUG-137850
Pick-to: 6.9
Change-Id: I07a27014023a60f07a97e323a7d7e5b9d233d555
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 41bbe3cbf091406cdd8f8ac4fcb1d0e19b7b4548)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>